--- a/01-flexbox-uvod/index.html
+++ b/01-flexbox-uvod/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="kontejner">
 
-        <div class="ctverecek prvni">1</div>
+        <div class="ctverecek prvni">co se deje nevim what yeah baby boy</div>
         <div class="ctverecek druhy">2</div>
         <div class="ctverecek treti">3</div>
         <div class="ctverecek ctvrty">4</div>
